--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>finanzmanager</name>
 	<description>Finanz Manager App</description>
+	<!-- define the packaging type -->
+<!--	<packaging>jar</packaging>-->
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -44,6 +46,7 @@
 	</dependencies>
 
 	<build>
+<!--		<finalName>finanzmanager</finalName>-->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
